Fixed broken css and other cleanups

--- a/application/Frontend/src/CreateListingForm.css
+++ b/application/Frontend/src/CreateListingForm.css
@@ -6,6 +6,7 @@
 
 .modal-overlay {
     position: fixed;
+    z-index: 9999;
     top: 0;
     left: 0;
     width: 100%;
